*** WooCommerce Extension Changelog ***

# 1.0.2
    * Added userData.billingAddress into Checkout SDK parameters.
    * The option for using Checkout SDK or Cashier was moved at the top of the Advanced settings. When change it, the unselected group of settings will hide.

# 1.0.1
    * Added billing "state" parameters in the requests.

# 1.0.0
	* Based on latest version of Nuvei Woocommerce plugin, but use Checkout SDK instead Web SDK.