@@ -200,7 +200,7 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 	  * @return array
 	 */
 	public function process_payment( $order_id) {
-		Nuvei_Logger::write('Process payment(), Order #' . $order_id);
+		Nuvei_Logger::write($order_id, 'Process payment() Order');
 		
 		$sc_nonce = Nuvei_Http::get_param('sc_nonce');
 		
@@ -271,7 +271,7 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 			if (!empty($url)) {
 				return array(
 					'result'    => 'success',
-					'redirect'    => add_query_arg(array(), $url)
+					'redirect'  => add_query_arg(array(), $url)
 				);
 			}
 			
@@ -300,144 +300,6 @@ class Nuvei_Gateway extends WC_Payment_Gateway
             ),
             wc_get_checkout_url() . 'order-received/' . $order_id . '/'
         );
-		
-//		Nuvei_Logger::write('Process Rest APM Order.');
-		
-//		$np_obj = new Nuvei_Payment($this->settings);
-//		$resp   = $np_obj->process(array(
-//			'order_id'             => $order_id, 
-//			'return_success_url'   => $return_success_url, 
-//			'return_error_url'     => $return_error_url
-//		));
-//		
-//		if (!$resp) {
-//			$msg = __('There is no response for the Order.', 'nuvei_checkout_woocommerce');
-//			
-//			$order->add_order_note($msg);
-//			$order->save();
-//			
-//			Nuvei_Logger::write('There is no response for the Order.');
-//			
-//			return array(
-//				'result'    => 'success',
-//				'redirect'  => $return_error_url
-//			);
-//		}
-//		
-//		if (empty(Nuvei_Http::get_request_status($resp))) {
-//			$msg = __('There is no Status for the Order.', 'nuvei_checkout_woocommerce');
-//			
-//			$order->add_order_note($msg);
-//			$order->save();
-//			
-//			Nuvei_Logger::write('There is no Status for the Order.');
-//			
-//			return array(
-//				'result'    => 'success',
-//				'redirect'  => $return_error_url
-//			);
-//		}
-//		
-//		# Redirect
-//		if (!empty($resp['redirectURL']) || !empty($resp['paymentOption']['redirectUrl'])) {
-//			return array(
-//				'result'    => 'success',
-//				'redirect'    => add_query_arg(
-//					array(),
-//					!empty($resp['redirectURL']) ? $resp['redirectURL'] : $resp['paymentOption']['redirectUrl']
-//				)
-//			);
-//		}
-//		
-//		if (empty($resp['transactionStatus'])) {
-//			$msg = __('There is no Transaction Status for the Order.', 'nuvei_checkout_woocommerce');
-//			
-//			$order->add_order_note($msg);
-//			$order->save();
-//			
-//			Nuvei_Logger::write('There is no Transaction Status for the Order.');
-//			
-//			return array(
-//				'result'    => 'success',
-//				'redirect'  => $return_error_url
-//			);
-//		}
-//		
-//		if ('DECLINED' === Nuvei_Http::get_request_status($resp)
-//			|| 'DECLINED' === $resp['transactionStatus']
-//		) {
-//			$order->add_order_note(__('Order Declined.', 'nuvei_checkout_woocommerce'));
-//			$order->set_status('cancelled');
-//			$order->save();
-//			
-//			return array(
-//				'result'    => 'success',
-//				'redirect'  => $return_error_url
-//			);
-//		}
-//		
-//		if ('ERROR' === Nuvei_Http::get_request_status($resp)
-//			|| 'ERROR' === $resp['transactionStatus']
-//		) {
-//			$order->set_status('failed');
-//
-//			$error_txt = __('Payment error', 'nuvei_checkout_woocommerce');
-//
-//			if (!empty($resp['reason'])) {
-//				$error_txt .= ': ' . $resp['errCode'] . ' - ' . $resp['reason'] . '.';
-//			} elseif (!empty($resp['threeDReason'])) {
-//				$error_txt .= ': ' . $resp['threeDReason'] . '.';
-//			} elseif (!empty($resp['message'])) {
-//				$error_txt .= ': ' . $resp['message'] . '.';
-//			}
-//			
-//			$order->add_order_note($error_txt);
-//			$order->save();
-//			
-//			return array(
-//				'result'    => 'success',
-//				'redirect'  => $return_error_url
-//			);
-//		}
-//		
-//		// catch Error code or reason
-//		if ( ( isset($resp['gwErrorCode']) && -1 === $resp['gwErrorCode'] )
-//			|| isset($resp['gwErrorReason'])
-//		) {
-//			$msg = __('Error with the Payment: ', 'nuvei_checkout_woocommerce') . $resp['gwErrorReason'] . '.';
-//
-//			$order->add_order_note($msg);
-//			$order->save();
-//
-//			return array(
-//				'result'    => 'success',
-//				'redirect'  => $return_error_url
-//			);
-//		}
-//		
-//		# SUCCESS
-//		// If we get Transaction ID save it as meta-data
-//		if (isset($resp['transactionId']) && $resp['transactionId']) {
-//			$order->update_meta_data(NUVEI_TRANS_ID, $resp['transactionId'], 0);
-//		}
-//		
-//		// save the response transactionType value
-//		if (isset($resp['transactionType']) && '' !== $resp['transactionType']) {
-//			$order->update_meta_data(NUVEI_RESP_TRANS_TYPE, $resp['transactionType']);
-//		}
-//
-//		if (isset($resp['transactionId']) && '' !== $resp['transactionId']) {
-//			$order->add_order_note(__('Payment succsess for Transaction Id ', 'nuvei_checkout_woocommerce') . $resp['transactionId']);
-//		} else {
-//			$order->add_order_note(__('Payment succsess.', 'nuvei_checkout_woocommerce'));
-//		}
-//
-//		$order->save();
-//		
-//		return array(
-//			'result'    => 'success',
-//			'redirect'  => $return_success_url
-//		);
 	}
 	
 	/**
@@ -941,6 +803,15 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 		return $default;
 	}
 	
+    /**
+     * @global type $woocommerce
+     * 
+     * @param string $success_url
+     * @param string $error_url
+     * @param int $order_id
+     * 
+     * @return string
+     */
 	private function generate_cashier_url( $success_url, $error_url, $order_id) {
 		global $woocommerce;
 		
@@ -956,11 +827,11 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 		Nuvei_Logger::write($products_data, 'get_cashier_url() $products_data.');
 		
 		$params = array(
-			'merchant_id'       => $this->settings['merchantId'],
-			'merchant_site_id'  => $this->settings['merchantSiteId'],
-			'version'           => '4.0.0',
-		//            'user_token_id'     => @$data['order']['description']['billingAddress']['email'],
-			'time_stamp'        => gmdate('Y-m-d H:i:s'),
+			'merchant_id'           => $this->settings['merchantId'],
+			'merchant_site_id'      => $this->settings['merchantSiteId'],
+            'merchant_unique_id'    => $order_id,
+			'version'               => '4.0.0',
+            'time_stamp'            => gmdate('Y-m-d H:i:s'),
 			
 			'first_name'        => urldecode($addresses['billingAddress']['firstName']),
 			'last_name'         => $addresses['billingAddress']['lastName'],
@@ -973,7 +844,7 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 			'phone1'            => $addresses['billingAddress']['phone'],
 			'merchantLocale'    => get_locale(),
 			
-			'notify_url'        => Nuvei_String::get_notify_url($this->settings, $order_id),
+			'notify_url'        => Nuvei_String::get_notify_url($this->settings),
 			'success_url'       => $success_url,
 			'error_url'         => $error_url,
 			'pending_url'       => $success_url,
@@ -986,6 +857,7 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 			'currency'          => get_woocommerce_currency(),
 			'total_tax'         => 0,
 			'total_amount'      => $total_amount,
+            'encoding'          => 'UTF-8'
 		);
 		
 		if (1 == $this->settings['use_upos']) {
@@ -1321,7 +1193,7 @@ class Nuvei_Gateway extends WC_Payment_Gateway
 				'title'         => __('Notify URL', 'nuvei_checkout_woocommerce'),
 				'type'          => 'text',
 				'description'   => '<b>' . __('Default URL: ', 'nuvei_checkout_woocommerce') . '</b>'
-					. Nuvei_String::get_notify_url($this->settings, '', true) . '<br/>'
+					. Nuvei_String::get_notify_url($this->settings, true) . '<br/>'
 					. __('To use the Default URL leave the field empty.', 'nuvei_checkout_woocommerce'),
 			),
 			'today_log' => array(
